fixed title spacing

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -924,7 +924,7 @@ letter-spacing: 0.2em;
 	color: #ffffff;
 	/* text-shadow: 3px 7px 2px rgba(88, 89, 145, 0.65); */
 	text-shadow: 0 0 10px rgb(157, 158, 255);
-	line-height: 1.2;
+	line-height: 0.9;
 font-style:
 }
 .home_title h1 span:first-of-type
